additional changes to format and continuing to add detail

--- a/artifacts/acvp_protocol.html
+++ b/artifacts/acvp_protocol.html
@@ -401,6 +401,8 @@
 <link href="#rfc.section.11.2.1.1" rel="Chapter" title="11.2.1.1 Parameters">
 <link href="#rfc.section.11.2.1.2" rel="Chapter" title="11.2.1.2 Response">
 <link href="#rfc.section.11.2.2" rel="Chapter" title="11.2.2 Create a New Vendor">
+<link href="#rfc.section.11.2.2.1" rel="Chapter" title="11.2.2.1 Request">
+<link href="#rfc.section.11.2.2.2" rel="Chapter" title="11.2.2.2 Response">
 <link href="#rfc.section.11.2.3" rel="Chapter" title="11.2.3 Vendor Information">
 <link href="#rfc.section.11.2.4" rel="Chapter" title="11.2.4 Update an existing Vendor">
 <link href="#rfc.section.11.2.5" rel="Chapter" title="11.2.5 Remove a Vendor">
@@ -452,7 +454,7 @@
 
   <meta name="dct.creator" content="Fussell, B., Ed." />
   <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-protocol-0.4" />
-  <meta name="dct.issued" scheme="ISO8601" content="2018-31" />
+  <meta name="dct.issued" scheme="ISO8601" content="2018-01" />
   <meta name="dct.abstract" content="This document defines the Automated Cryptographic Validation Protocol(ACVP)." />
   <meta name="description" content="This document defines the Automated Cryptographic Validation Protocol(ACVP)." />
 
@@ -473,10 +475,10 @@
 </tr>
 <tr>
 <td class="left">Intended status: Informational</td>
-<td class="right">May 31, 2018</td>
+<td class="right">June 1, 2018</td>
 </tr>
 <tr>
-<td class="left">Expires: December 2, 2018</td>
+<td class="left">Expires: December 3, 2018</td>
 <td class="right"></td>
 </tr>
 
@@ -493,7 +495,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at https://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on December 2, 2018.</p>
+<p>This Internet-Draft will expire on December 3, 2018.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2018 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (https://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
@@ -557,7 +559,11 @@
 </li>
 </ul><li>11.2.2.   <a href="#rfc.section.11.2.2">Create a New Vendor</a>
 </li>
-<li>11.2.3.   <a href="#rfc.section.11.2.3">Vendor Information</a>
+<ul><li>11.2.2.1.   <a href="#rfc.section.11.2.2.1">Request</a>
+</li>
+<li>11.2.2.2.   <a href="#rfc.section.11.2.2.2">Response</a>
+</li>
+</ul><li>11.2.3.   <a href="#rfc.section.11.2.3">Vendor Information</a>
 </li>
 <li>11.2.4.   <a href="#rfc.section.11.2.4">Update an existing Vendor</a>
 </li>
@@ -980,10 +986,67 @@ each message.
 <h1 id="rfc.section.11.2">
 <a href="#rfc.section.11.2">11.2.</a> <a href="#vendors" id="vendors">Vendor Resources</a>
 </h1>
+<p id="rfc.section.11.2.p.1">The available properties for vendor resources are: </p>
+
+<ul class="empty">
+<li>
+<strong>url</strong> - <samp>string</samp>, identifier for this resource</li>
+<li>
+<strong>name</strong> - <samp>string</samp>
+</li>
+<li>
+<strong>website</strong> - <samp>string</samp>
+</li>
+<li>
+<strong>emails</strong> - array of <samp>string</samp>s</li>
+<li>
+<strong>contacts</strong> - an array of contact objects, <ul class="empty">
+<li>
+<strong>name</strong> - <samp>string</samp>
+</li>
+<li>
+<strong>emails</strong> - array of <samp>string</samp>s</li>
+<li>
+<strong>phoneNumbers</strong> - array of phone objects, <ul class="empty">
+<li>
+<strong>number</strong> - <samp>string</samp>
+</li>
+<li>
+<strong>type</strong> - <samp>string</samp>, one of (fax, voice)</li>
+</ul>
+<p> </p>
+</li>
+</ul>
+<p> </p>
+</li>
+<li>
+<strong>address</strong> - an address object, <ul class="empty">
+<li>
+<strong>street</strong> - <samp>string</samp>
+</li>
+<li>
+<strong>locality</strong> - <samp>string</samp>
+</li>
+<li>
+<strong>region</strong> - <samp>string</samp>
+</li>
+<li>
+<strong>country</strong> - <samp>string</samp>
+</li>
+<li>
+<strong>postalCode</strong> - <samp>string</samp>
+</li>
+</ul>
+<p> </p>
+</li>
+</ul>
+
+<p> </p>
 <h1 id="rfc.section.11.2.1">
 <a href="#rfc.section.11.2.1">11.2.1.</a> <a href="#vendors_get" id="vendors_get">Vendor Listing</a>
 </h1>
-<p id="rfc.section.11.2.1.p.1">Returns a list of vendors.</p>
+<p><strong>GET /vendors</strong></p>
+<p id="rfc.section.11.2.1.p.2">Returns a listing of vendors.</p>
 <h1 id="rfc.section.11.2.1.1">
 <a href="#rfc.section.11.2.1.1">11.2.1.1.</a> Parameters</h1>
 <p></p>
@@ -1001,18 +1064,35 @@ each message.
             "url": "/acvp/v1/vendors/1",
             "name": "Cisco",
             "website": "www.cisco.com",
-            "contact": [{
+            "contacts": [{
                 "name": "John Doe",
                 "email": "johndoe@cisco.com"
             }]
         },
         {
-            "url": "/acvp/v1/vendors/1",
-            "name": "Cisco",
-            "website": "www.cisco.com",
-            "contact": [{
-                "name": "John Doe",
-                "email": "johndoe@cisco.com"
+            "url": "/acvp/v1/vendors/2",
+            "name": "Acme, LLC",
+            "website": "www.acme.acme",
+            "emails" : [ "inquiry@acme.acme" ],
+            "contacts": [{
+                "name": "Jane Smith",
+                "emails": ["jane.smith@acme.acme"],
+                "phoneNumbers" : [
+                    {
+                        "name": "555-555-0001",
+                        "type" : "fax"
+                    }, {
+                        "name": "555-555-0002",
+                        "type" : "voice"
+                    }
+                ],
+                "address" : {
+                    "street" : "123 Main Street",
+                    "locality" : "Any Town",
+                    "region" : "AnyState",
+                    "country" : "USA",
+                    "postalCode" : "123456"
+                }
             }]
         }
     ]}
@@ -1021,6 +1101,48 @@ each message.
 <h1 id="rfc.section.11.2.2">
 <a href="#rfc.section.11.2.2">11.2.2.</a> <a href="#vendors_post" id="vendors_post">Create a New Vendor</a>
 </h1>
+<p><strong>POST /vendors</strong></p>
+<p id="rfc.section.11.2.2.p.2">Request the creation of a new Vendor.</p>
+<h1 id="rfc.section.11.2.2.1">
+<a href="#rfc.section.11.2.2.1">11.2.2.1.</a> Request</h1>
+<pre>
+[
+    {"acvVersion": "0.5"},
+    {
+      "name": "Acme, LLC",
+      "website": "www.acme.acme",
+      "emails" : [ "inquiry@acme.acme" ],
+      "contacts": [{
+          "name": "Jane Smith",
+          "emails": ["jane.smith@acme.acme"],
+          "phoneNumbers" : [
+              {
+                  "name": "555-555-0001",
+                  "type" : "fax"
+              }, {
+                  "name": "555-555-0002",
+                  "type" : "voice"
+              }
+          ],
+          "address" : {
+              "street" : "123 Main Street",
+              "locality" : "Any Town",
+              "region" : "AnyState",
+              "country" : "USA",
+              "postalCode" : "123456"
+          }
+      }]
+    }
+]
+           </pre>
+<h1 id="rfc.section.11.2.2.2">
+<a href="#rfc.section.11.2.2.2">11.2.2.2.</a> Response</h1>
+<pre>
+[
+    {"acvVersion": "0.5"},
+    {"url": "/acvp/v1/vendors/2"}
+]
+         </pre>
 <h1 id="rfc.section.11.2.3">
 <a href="#rfc.section.11.2.3">11.2.3.</a> <a href="#vendor_get" id="vendor_get">Vendor Information</a>
 </h1>
@@ -1436,7 +1558,7 @@ Content-Length: &lt;length of results&gt;
 </ul>
 
 <p> </p>
-<p id="rfc.section.13.p.2">The response will inidcate the offset and the total count using <samp>offset</samp> and <samp>total</samp> properties.</p>
+<p id="rfc.section.13.p.2">The response will indicate the offset and the total count using <samp>offset</samp> and <samp>total</samp> properties.</p>
 <h1 id="rfc.section.14">
 <a href="#rfc.section.14">14.</a> Error Codes</h1>
 <p id="rfc.section.14.p.1">Errors will follow HTTP[S] numbering scheme. In addition errors as well as 200 messages may carry JSON encoded information that describes in detail the error and any associated troubleshooting information. A non-exhaustive list of JSON encoded error messages are in Appendix B.</p>
