--- a/artifacts/acvp_protocol.html
+++ b/artifacts/acvp_protocol.html
@@ -450,7 +450,7 @@
 
   <meta name="dct.creator" content="Fussell, B., Ed." />
   <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-protocol-0.4" />
-  <meta name="dct.issued" scheme="ISO8601" content="2018-01" />
+  <meta name="dct.issued" scheme="ISO8601" content="2018-04" />
   <meta name="dct.abstract" content="This document defines the Automated Cryptographic Validation Protocol(ACVP)." />
   <meta name="description" content="This document defines the Automated Cryptographic Validation Protocol(ACVP)." />
 
@@ -471,10 +471,10 @@
 </tr>
 <tr>
 <td class="left">Intended status: Informational</td>
-<td class="right">June 1, 2018</td>
+<td class="right">June 4, 2018</td>
 </tr>
 <tr>
-<td class="left">Expires: December 3, 2018</td>
+<td class="left">Expires: December 6, 2018</td>
 <td class="right"></td>
 </tr>
 
@@ -491,7 +491,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at https://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on December 3, 2018.</p>
+<p>This Internet-Draft will expire on December 6, 2018.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2018 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (https://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
@@ -1478,31 +1478,76 @@ each message.
 <h1 id="rfc.section.11.4">
 <a href="#rfc.section.11.4">11.4.</a> <a href="#vectorSet" id="vectorSet">Vector Sets</a>
 </h1>
+<p id="rfc.section.11.4.p.1">The available properties for vector set resources are: </p>
+
+<ul class="empty">
+<li>
+<strong>url</strong> - <samp>string</samp>, identifier for this resource</li>
+<li>
+<strong>vsId</strong> - <samp>string</samp>
+</li>
+<li>
+<strong>algorithm</strong> - <samp>string</samp>
+</li>
+<li>
+<strong>mode</strong> - <samp>string</samp>
+</li>
+<li>
+<strong>testGroups</strong> - array of test group objects, <ul class="empty">
+<li>
+<samp>{varies}</samp> - based on the values of <samp>algorithm</samp> and <samp>mode</samp> there are zero or more test group properties.  </li>
+<li>
+<strong>tests</strong> - array of test objects, <ul class="empty">
+<li>
+<strong>tcId</strong> - <samp>string</samp>
+</li>
+<li>
+<samp>{varies}</samp> - based on the values of <samp>algorithm</samp> and <samp>mode</samp> there are zero or more test properties.  </li>
+</ul>
+<p> </p>
+</li>
+</ul>
+<p> </p>
+</li>
+</ul>
+
+<p> </p>
 <h1 id="rfc.section.11.4.1">
 <a href="#rfc.section.11.4.1">11.4.1.</a> <a href="#vectorSets_get" id="vectorSets_get">Vectors Set Listing</a>
 </h1>
-<p id="rfc.section.11.4.1.p.1">Returns a list of vendors</p>
+<p><strong>GET /testSessions/{testSessionId}/vectorSets</strong></p>
+<p id="rfc.section.11.4.1.p.2">Returns a list of Vector Sets for the specific Test Session.</p>
 <h1 id="rfc.section.11.4.2">
 <a href="#rfc.section.11.4.2">11.4.2.</a> <a href="#vectorSet_get" id="vectorSet_get">Vector Set Download</a>
 </h1>
-<p id="rfc.section.11.4.2.p.1">Returns a list of vendors</p>
+<p><strong>GET /testSessions/{testSessionId}/vectorSets/{vectorSetId}</strong></p>
+<p id="rfc.section.11.4.2.p.2">Vector Set download request.</p>
 <h1 id="rfc.section.11.4.3">
 <a href="#rfc.section.11.4.3">11.4.3.</a> <a href="#vectorSet_delete" id="vectorSet_delete">Cancel Testing of a Vector Set</a>
 </h1>
-<p id="rfc.section.11.4.3.p.1">May be cases where a particular vector set may not be cancelled and the entire Test Session will need to be cancelled instead.</p>
+<p><strong>DELETE /testSessions/{testSessionId}/vectorSets/{vectorSetId}</strong></p>
+<p id="rfc.section.11.4.3.p.2">Cancel testing for a specific Vector Set.</p>
+<p id="rfc.section.11.4.3.p.3">May be cases where a particular vector set may not be cancelled and the entire Test Session will need to be cancelled instead.</p>
 <h1 id="rfc.section.11.4.4">
 <a href="#rfc.section.11.4.4">11.4.4.</a> <a href="#vectorSet_results_get" id="vectorSet_results_get">Request Validation Results</a>
 </h1>
-<p id="rfc.section.11.4.4.p.1">Returns a list of vendors</p>
+<p><strong>GET /testSessions/{testSessionId}/vectorSets/{vectorSetId}/results</strong></p>
+<p id="rfc.section.11.4.4.p.2">Request Validation Results for a Vector Set.</p>
 <h1 id="rfc.section.11.4.5">
 <a href="#rfc.section.11.4.5">11.4.5.</a> <a href="#vectorSet_results_post" id="vectorSet_results_post">Submit Results</a>
 </h1>
+<p><strong>POST /testSessions/{testSessionId}/vectorSets/{vectorSetId}/results</strong></p>
+<p id="rfc.section.11.4.5.p.2">Initial Submission of Vector Set Test Results.</p>
 <h1 id="rfc.section.11.4.6">
 <a href="#rfc.section.11.4.6">11.4.6.</a> <a href="#vectorSet_results_put" id="vectorSet_results_put">Update Results Submission</a>
 </h1>
+<p><strong>PUT /testSessions/{testSessionId}/vectorSets/{vectorSetId}/results</strong></p>
+<p id="rfc.section.11.4.6.p.2">Update Vector Set Test Results Submission.</p>
 <h1 id="rfc.section.11.4.7">
 <a href="#rfc.section.11.4.7">11.4.7.</a> <a href="#vectorSet_expected_get" id="vectorSet_expected_get">Retrieve Expected Results</a>
 </h1>
+<p><strong>GET /testSessions/{testSessionId}/vectorSets/{vectorSetId}/expected</strong></p>
+<p id="rfc.section.11.4.7.p.2">Expected Test Results.</p>
 <h1 id="rfc.section.11.5">
 <a href="#rfc.section.11.5">11.5.</a> <a href="#reg_capex" id="reg_capex">Product Registration with Capabilities</a>
 </h1>
