Added responses for POST resource endpoints

--- a/artifacts/acvp_protocol.html
+++ b/artifacts/acvp_protocol.html
@@ -1379,6 +1379,14 @@
     }
 ]
            </pre>
+<h1 id="rfc.section.11.3.2.2">
+<a href="#rfc.section.11.3.2.2">11.3.2.2.</a> Response</h1>
+<pre>
+[
+    {"acvVersion": "0.5"},
+    {"url": "/acvp/v1/modules/5"}
+]
+         </pre>
 <h1 id="rfc.section.11.3.3">
 <a href="#rfc.section.11.3.3">11.3.3.</a> <a href="#module_get" id="module_get">Retrieve information for a Module</a>
 </h1>
@@ -1480,6 +1488,14 @@
     }
 ]
            </pre>
+<h1 id="rfc.section.11.4.2.2">
+<a href="#rfc.section.11.4.2.2">11.4.2.2.</a> Response</h1>
+<pre>
+[
+    {"acvVersion": "0.5"},
+    {"url": "/acvp/v1/oes/20"}
+]
+         </pre>
 <h1 id="rfc.section.11.4.3">
 <a href="#rfc.section.11.4.3">11.4.3.</a> <a href="#oe_get" id="oe_get">Retrieve information for an Operational Environment</a>
 </h1>
@@ -1582,6 +1598,14 @@
     }
 ]
            </pre>
+<h1 id="rfc.section.11.5.2.2">
+<a href="#rfc.section.11.5.2.2">11.5.2.2.</a> Response</h1>
+<pre>
+[
+    {"acvVersion": "0.5"},
+    {"url": "/acvp/v1/dependencies/7"}
+]
+         </pre>
 <h1 id="rfc.section.11.5.3">
 <a href="#rfc.section.11.5.3">11.5.3.</a> <a href="#dependencies_properties_get" id="dependencies_properties_get">List Dependency Properties</a>
 </h1>
@@ -2236,6 +2260,9 @@
     }
 ]
            </pre>
+<h1 id="rfc.section.11.8.5.2">
+<a href="#rfc.section.11.8.5.2">11.8.5.2.</a> Response</h1>
+<p id="rfc.section.11.8.5.2.p.1">No content response. Standard HTTP status codes will indicate success or failure of the submission, but do not indicated the disposition of the tests.</p>
 <h1 id="rfc.section.11.8.6">
 <a href="#rfc.section.11.8.6">11.8.6.</a> <a href="#vectorSet_results_put" id="vectorSet_results_put">Update Results Submission</a>
 </h1>
