DSA references to ECDSA #371

--- a/artifacts/acvp_sub_kas_ecc.html
+++ b/artifacts/acvp_sub_kas_ecc.html
@@ -602,7 +602,7 @@
 <td class="left">algorithm</td>
 <td class="left">a prerequisite algorithm</td>
 <td class="left">value</td>
-<td class="left">CCM, CMAC, DRBG, DSA, HMAC, SHA</td>
+<td class="left">CCM, CMAC, DRBG, ECDSA, HMAC, SHA</td>
 <td class="left">No</td>
 </tr>
 <tr>
@@ -1760,7 +1760,7 @@
 </tr>
 <tr>
 <td class="left">staticPublicServerX</td>
-<td class="left">The DSA static public key X coordinate</td>
+<td class="left">The ECDSA static public key X coordinate</td>
 <td class="left">value</td>
 <td class="left">Yes</td>
 </tr>
@@ -1772,7 +1772,7 @@
 </tr>
 <tr>
 <td class="left">staticPublicServerY</td>
-<td class="left">The DSA static public key Y coordinate</td>
+<td class="left">The ECDSA static public key Y coordinate</td>
 <td class="left">value</td>
 <td class="left">Yes</td>
 </tr>
@@ -1784,7 +1784,7 @@
 </tr>
 <tr>
 <td class="left">ephemeralPublicServerX</td>
-<td class="left">The DSA ephemeral public key X coordinate</td>
+<td class="left">The ECDSA ephemeral public key X coordinate</td>
 <td class="left">value</td>
 <td class="left">Yes</td>
 </tr>
@@ -1796,7 +1796,7 @@
 </tr>
 <tr>
 <td class="left">ephemeralPublicServerY</td>
-<td class="left">The DSA ephemeral public key Y coordinate</td>
+<td class="left">The ECDSA ephemeral public key Y coordinate</td>
 <td class="left">value</td>
 <td class="left">Yes</td>
 </tr>
@@ -1844,7 +1844,7 @@
 </tr>
 <tr>
 <td class="left">staticPrivateIut</td>
-<td class="left">The IUT DSA static private key</td>
+<td class="left">The IUT ECDSA static private key</td>
 <td class="left">value</td>
 <td class="left">Yes</td>
 </tr>
@@ -1856,7 +1856,7 @@
 </tr>
 <tr>
 <td class="left">staticPublicIutX</td>
-<td class="left">The IUT DSA static public key X coordinate</td>
+<td class="left">The IUT ECDSA static public key X coordinate</td>
 <td class="left">value</td>
 <td class="left">Yes</td>
 </tr>
@@ -1868,7 +1868,7 @@
 </tr>
 <tr>
 <td class="left">staticPublicIutY</td>
-<td class="left">The IUT DSA static public key Y coordinate</td>
+<td class="left">The IUT ECDSA static public key Y coordinate</td>
 <td class="left">value</td>
 <td class="left">Yes</td>
 </tr>
@@ -1880,7 +1880,7 @@
 </tr>
 <tr>
 <td class="left">ephemeralPrivateIut</td>
-<td class="left">The IUT DSA ephemeral private key</td>
+<td class="left">The IUT ECDSA ephemeral private key</td>
 <td class="left">value</td>
 <td class="left">Yes</td>
 </tr>
@@ -1892,7 +1892,7 @@
 </tr>
 <tr>
 <td class="left">ephemeralPublicIutX</td>
-<td class="left">The IUT DSA ephemeral public key X coordinate</td>
+<td class="left">The IUT ECDSA ephemeral public key X coordinate</td>
 <td class="left">value</td>
 <td class="left">Yes</td>
 </tr>
@@ -1904,7 +1904,7 @@
 </tr>
 <tr>
 <td class="left">ephemeralPublicIutY</td>
-<td class="left">The IUT DSA ephemeral public key Y coordinate</td>
+<td class="left">The IUT ECDSA ephemeral public key Y coordinate</td>
 <td class="left">value</td>
 <td class="left">Yes</td>
 </tr>
