Fixes #369 - updates parameter set labels to reflect ECC (was FFC)

--- a/artifacts/acvp_sub_kas_ecc.html
+++ b/artifacts/acvp_sub_kas_ecc.html
@@ -1539,7 +1539,7 @@
 <tr>
 <td class="left">parmSet</td>
 <td class="left">Parameter set value to use</td>
-<td class="left">fb, fc</td>
+<td class="left">eb, ec, ed, ee</td>
 <td class="left">No</td>
 </tr>
 <tr>
