Fixes #365 - updates "role" -> "kasRole"

--- a/artifacts/acvp_sub_kas_ffc.html
+++ b/artifacts/acvp_sub_kas_ffc.html
@@ -2031,7 +2031,7 @@
 	"function": ["keyPairGen", "dpGen"],
 	"scheme": {
 		"dhEphem": {
-			"role": ["initiator", "responder"],
+			"kasRole": ["initiator", "responder"],
 			"kdfNoKc": {
 				"kdfOption": {
 					"concatenation": "uPartyInfo||vPartyInfo",
@@ -2052,7 +2052,7 @@
 			}
 		},
 		"mqv1": {
-			"role": ["initiator", "responder"],
+			"kasRole": ["initiator", "responder"],
 			"kdfNoKc": {
 				"kdfOption": {
 					"concatenation": "uPartyInfo||vPartyInfo",
@@ -2154,7 +2154,7 @@
 	"function": ["keyPairGen", "dpGen"],
 	"scheme": {
 		"dhEphem": {
-			"role": ["initiator", "responder"],
+			"kasRole": ["initiator", "responder"],
 			"noKdfNoKc": {
 				"parameterSet": {
 					"fb": {
@@ -2164,7 +2164,7 @@
 			}
 		},
 		"mqv1": {
-			"role": ["initiator", "responder"],
+			"kasRole": ["initiator", "responder"],
 			"noKdfNoKc": {
 				"parameterSet": {
 					"fb": {
