--- a/artifacts/acvp_sub_kas_ecc.html
+++ b/artifacts/acvp_sub_kas_ecc.html
@@ -2473,7 +2473,7 @@
 	"function": ["keyPairGen", "dpGen"],
 	"scheme": {
 		"ephemeralUnified": {
-			"role": ["initiator", "responder"],
+			"kasRole": ["initiator", "responder"],
 			"kdfNoKc": {
 				"kdfOption": {
 					"concatenation": "uPartyInfo||vPartyInfo",
@@ -2535,7 +2535,7 @@
 	"function": ["keyPairGen", "dpGen"],
 	"scheme": {
 		"ephemeralUnified": {
-			"role": ["initiator", "responder"],
+			"kasRole": ["initiator", "responder"],
 			"noKdfNoKc": {
 				"parameterSet": {
 					"eb": {
