Fixes #364, corrects OI bitlength for ecc/ffc

--- a/artifacts/acvp_sub_kas_ecc.html
+++ b/artifacts/acvp_sub_kas_ecc.html
@@ -1319,7 +1319,7 @@
 <h1 id="rfc.section.2.10.1">
 <a href="#rfc.section.2.10.1">2.10.1.</a> <a href="#oiPatternConstruction" id="oiPatternConstruction">Other Information Construction</a>
 </h1>
-<p id="rfc.section.2.10.1.p.1">Some IUTs require a specific pattern for the OtherInfo portion of the KDFs for KAS.  An "oiPattern" is specified in the KDF registration to accommodate such requirements. Regardless of the oiPattern specified, the OI bitlength must be 240 for ECC, and 376 for ECC.  The OI will be padded with random bits (or the most significant bits utilized) when the specified OI pattern does not meet the bitlength requirement </p>
+<p id="rfc.section.2.10.1.p.1">Some IUTs require a specific pattern for the OtherInfo portion of the KDFs for KAS.  An "oiPattern" is specified in the KDF registration to accommodate such requirements. Regardless of the oiPattern specified, the OI bitlength must be 240 for FFC, and 376 for ECC.  The OI will be padded with random bits (or the most significant bits utilized) when the specified OI pattern does not meet the bitlength requirement </p>
 <p id="rfc.section.2.10.1.p.2">Pattern candidates:</p>
 <p></p>
 
