SNMP added tcId to json response

--- a/artifacts/acvp_sub_kdf135_snmp.html
+++ b/artifacts/acvp_sub_kdf135_snmp.html
@@ -899,11 +899,28 @@
 <th class="left">Description</th>
 <th class="left">JSON type</th>
 </tr></thead>
-<tbody><tr>
+<tbody>
+<tr>
+<td class="left">tcId</td>
+<td class="left">Numeric identifier for the test case, unique across the entire vector set.</td>
+<td class="left">value</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
 <td class="left">sharedKey</td>
 <td class="left">Shared key value</td>
 <td class="left">value (hex)</td>
-</tr></tbody>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+</tbody>
 </table>
 <h1 id="rfc.section.5">
 <a href="#rfc.section.5">5.</a> <a href="#Acknowledgements" id="Acknowledgements">Acknowledgements</a>
