TLS Updated tcId description

--- a/artifacts/acvp_sub_kdf135_tls.html
+++ b/artifacts/acvp_sub_kdf135_tls.html
@@ -974,7 +974,7 @@
 <tbody>
 <tr>
 <td class="left">tcId</td>
-<td class="left">The test case Id</td>
+<td class="left">Numeric identifier for the test case, unique across the entire vector set.</td>
 <td class="left">value</td>
 </tr>
 <tr>
