updates per IETF guidelines

--- a/artifacts/draft-fussell-acvp-spec-00.html
+++ b/artifacts/draft-fussell-acvp-spec-00.html
@@ -631,7 +631,7 @@
   </ul>
 
   <h1 id="rfc.section.1"><a href="#rfc.section.1">1.</a> Introduction</h1>
-<p id="rfc.section.1.p.1">The current methods used for cryptographic module testing are limited by manual test vector exchange, long validation cycles and cost.  These problem areas impact development cycles, hinder adoption of new technologies and contribute to end customer anxiety when deciding whether to deploy unvalidated new crypto with CVE fixes over previously deployed and validated crypto. In order to compat these issues validation authorities need a more automateable method of cryptographic testing.  The ACV Protocol(ACVP) is designed with this in mind. This document describes how ACVP can be used to address these issues and how it is structured with respect to the client-server model, the messaging protocol, optional features and flows.</p>
+<p id="rfc.section.1.p.1">The current methods used for cryptographic module testing are limited by manual test vector exchange, long validation cycles and cost.  These problem areas impact development cycles, hinder adoption of new technologies and contribute to end customer anxiety when deciding whether to deploy unvalidated new crypto with CVE fixes over previously deployed and validated crypto. In order to combat these issues validation authorities need a method of cryptographic testing that is easily automated.  The ACV Protocol(ACVP) is designed with this in mind. This document describes how ACVP can be used to address these issues and how it is structured with respect to the client-server model, the messaging protocol, optional features and flows.</p>
 <h1 id="rfc.section.2"><a href="#rfc.section.2">2.</a> Requirements Language</h1>
 <p id="rfc.section.2.p.1">The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this document are to be interpreted as described in BCP 14, RFC 2119 <a href="#RFC2119">[RFC2119]</a>.</p>
 <h1 id="rfc.section.3"><a href="#rfc.section.3">3.</a> <a href="#caps_reg" id="caps_reg">Overview</a></h1>
@@ -764,9 +764,9 @@
 
          +-------------+--------------------+---------------+
             server          path prefix          resource
-         +-------------+------==------------+---------------+
+         +-------------+--------------------+---------------+
  https://acvts.nist.gov/acvp/validation/acvp/login
-         +-------------+----------+----+--+-----------------+
+         +-------------+--------------------+---------------+
                           context  API   
 
 
