updates per IETF guidelines

--- a/artifacts/draft-fussell-acvp-spec-00.html
+++ b/artifacts/draft-fussell-acvp-spec-00.html
@@ -472,8 +472,8 @@
   <meta name="dct.creator" content="Fussell, B., Ed., Vassilev, A., Ed., and H. Booth" />
   <meta name="dct.identifier" content="urn:ietf:id:draft-fussell-acvp-spec-00" />
   <meta name="dct.issued" scheme="ISO8601" content="2018-8-24" />
-  <meta name="dct.abstract" content="The ACV Protocol provides a method for communication between a cryptographic module that is embedded inside of a device or otherwise running on a platform accessible via computer network, and an external testing system, using standard network communication interfaces and protocols. This communication protocol can also be used to validate the correctness of the implementations of the algorithms in the cryptographic module with a validation authority." />
-  <meta name="description" content="The ACV Protocol provides a method for communication between a cryptographic module that is embedded inside of a device or otherwise running on a platform accessible via computer network, and an external testing system, using standard network communication interfaces and protocols. This communication protocol can also be used to validate the correctness of the implementations of the algorithms in the cryptographic module with a validation authority." />
+  <meta name="dct.abstract" content="The ACV Protocol provides a method for communication between a cryptographic module that is embedded inside of a device or otherwise running on a platform accessible via computer network, and an external testing system, using standard network communication interfaces and protocols. This communication protocol can also be used to validate the correctness of the algorithm implementations in the cryptographic module with a validation authority." />
+  <meta name="description" content="The ACV Protocol provides a method for communication between a cryptographic module that is embedded inside of a device or otherwise running on a platform accessible via computer network, and an external testing system, using standard network communication interfaces and protocols. This communication protocol can also be used to validate the correctness of the algorithm implementations in the cryptographic module with a validation authority." />
 
 </head>
 
@@ -517,7 +517,7 @@
   <h1 id="rfc.abstract">
   <a href="#rfc.abstract">Abstract</a>
 </h1>
-<p>The ACV Protocol provides a method for communication between a cryptographic module that is embedded inside of a device or otherwise running on a platform accessible via computer network, and an external testing system, using standard network communication interfaces and protocols. This communication protocol can also be used to validate the correctness of the implementations of the algorithms in the cryptographic module with a validation authority.</p>
+<p>The ACV Protocol provides a method for communication between a cryptographic module that is embedded inside of a device or otherwise running on a platform accessible via computer network, and an external testing system, using standard network communication interfaces and protocols. This communication protocol can also be used to validate the correctness of the algorithm implementations in the cryptographic module with a validation authority.</p>
 <h1 id="rfc.status">
   <a href="#rfc.status">Status of This Memo</a>
 </h1>
@@ -775,7 +775,7 @@
 <p class="figure">Figure 4</p>
 <p id="rfc.section.5.1.p.1">Note that deployments utilizing ACV Proxy server may use a different protocol, e.g., HTTP, custom server, context and port number to interact with the DUT.</p>
 <h1 id="rfc.section.5.2"><a href="#rfc.section.5.2">5.2.</a> HTTP URI Resources</h1>
-<p id="rfc.section.5.2.p.1">In the table below, any part of a resource path enclosed in curly braces, { or }, are replaced by an instance of what is described in the braces. For example {testSessionId} could be replaced with 1.</p>
+<p id="rfc.section.5.2.p.1">In the table below, any parts of a resource path enclosed in curly braces, { or }, are replaced by an instance of what is described in the braces. For example {testSessionId} could be replaced with 1.</p>
 <div id="rfc.table.1"/>
 <div id="uri_table"/>
 <p>An empty cell for a resource and HTTP Method combination denotes that the server returns an HTTP Status 405 code <em>Method not allowed (405)</em>.  </p>
