Adds BFT example to SigGen

--- a/artifacts/acvp_sub_eddsa.html
+++ b/artifacts/acvp_sub_eddsa.html
@@ -973,7 +973,7 @@
 </tr>
 <tr>
 <td class="left">testType</td>
-<td class="left">The testType for the group</td>
+<td class="left">The testType for the group. Either AFT or BFT.</td>
 <td class="left">value</td>
 <td class="left">No</td>
 </tr>
@@ -1499,7 +1499,27 @@
                         "message": "A81C8A22735A260CB1A8105A2964646097D8A9B110701AB0D49C9071836CAD39E31F5020D24B2C841FAC58F44F3F3F814495B063A686F6F93C5C6D9FDF45B9099C609A69E6A9F6483C5038066A560D413C6FB73D76499A7D8836C9C89368D557B2C24A5D817CF1FBD226AC41037E3005250007B49C6CCCE7BD1BE5D7A5C96EE8"
                     }
                 ]
-            }
+            },
+			{
+				"tgId": 5,
+				"testType": "bft",
+				"curve": "ed-25519",
+				"preHash": false,
+				"tests": [
+					{
+						"tcId": 41,
+						"message": "F27E9F9D"
+					},
+					{
+						"tcId": 42,
+						"message": "F27E9F9C"
+					},
+					{
+						"tcId": 43,
+						"message": "F27E9F9F"
+					}
+				]
+			}
         ]
     }
 ]
@@ -1524,7 +1544,25 @@
 						"signature": "772990B0E53B3E21DC8BD139CECB39892D75BD70DAFFDC73E241E29515E67CC642CB2A6B479FFEF4F3F16B5BC3DDF06AB25A92028F2DC0464B3CFDFD3B8F4D08"
 					}
 				]
-            }
+            },
+			{
+				"tgId": 5,
+				"q": "ADD51513B67540E3A392721742C7E81F1BAE77DEFC16314E32A06976BA9BBFF7",
+				"tests": [
+					{
+						"tcId": 41,
+						"signature": "6EA857E68CEC0825EAD378A2F445BB17993D151CF9A168A44F47E13D356F6DC9AA67517DE4A2FB22BA24E1732DA0234427A2572CBE80294277F2141498E7F50E"
+					},
+					{
+						"tcId": 42,
+						"signature": "883B0336036509FC44CD2E507C5E916696213F9CF2429796E248516EFBDFAFE5C98EE6DBF82314B6FB5403383BC2E4ECCC89C7D686FE3A630B74866A0126740C"
+					},
+					{
+						"tcId": 43,
+						"signature": "E402705AC2EFC216EB7FA1AC5461A8451CE6F72B0AFA63D75BFBD5C4DD98A07207168CC6A542F01AAC6C31EC1C09062B053A54F6C93B801460FE33348B87DD03"
+					}
+				]
+			}
         ]
     }
 ]
