Updates version from a number in each example to a tag referencing the protocol version

--- a/artifacts/acvp_sub_rsa.html
+++ b/artifacts/acvp_sub_rsa.html
@@ -2550,7 +2550,7 @@
 <pre>
 
  [
-   { "acvVersion": "0.5" },
+   { "acvVersion": &lt;acvp-version&gt; },
    { "vsId": 1133,
      "algorithm": "RSA",
      "mode": "keyGen",
@@ -2762,7 +2762,7 @@
 </h1>
 <pre>
 [
-    { "acvVersion" : "0.5" },
+    { "acvVersion" : &lt;acvp-version&gt; },
     {
         "vsId" : 172,
         "algorithm" : "RSA",
@@ -2828,7 +2828,7 @@
 </h1>
 <pre>
  [
-   { "acvVersion": "0.5" },
+   { "acvVersion": &lt;acvp-version&gt; },
    { "vsId": 1163,
       "algorithm": "RSA",
       "mode": "sigGen",
@@ -2916,7 +2916,7 @@
 </h1>
 <pre>
  [
-   { "acvVersion": "0.5" },
+   { "acvVersion": &lt;acvp-version&gt; },
    { "vsId": 1173,
       "algorithm": "RSA",
       "mode": "sigVer",
@@ -3032,7 +3032,7 @@
 </h1>
 <pre>
  [
-   { "acvVersion": "0.5" },
+   { "acvVersion": &lt;acvp-version&gt; },
    { "vsId": 1193,
       "algorithm": "RSA",
       "mode": "signaturePrimitive",
@@ -3065,7 +3065,7 @@
 </h1>
 <pre>
  [
-   { "acvVersion": "0.5" },
+   { "acvVersion": &lt;acvp-version&gt; },
    { "vsId": 1194,
       "algorithm": "RSA",
       "mode": "decryptionPrimitive",
@@ -3101,7 +3101,7 @@
 <p id="rfc.section.C.1.p.1">The following is a example JSON object for RSA keyGen test results sent from the crypto module to the ACVP server.</p>
 <pre>
              [
-                { "acvVersion": "0.5" },
+                { "acvVersion": &lt;acvp-version&gt; },
                 { "vsId": 1133,
                     "algorithm": "RSA",
                     "mode": keyGen,
@@ -3376,7 +3376,7 @@
 <p id="rfc.section.C.2.p.1">The following is a example JSON object for RSA sigGen test results sent from the crypto module to the ACVP server.</p>
 <pre>
              [
-                { "acvVersion": "0.5" },
+                { "acvVersion": &lt;acvp-version&gt; },
                 { "vsId": 1163,
                   "algorithm": "RSA",
                   "mode": "sigGen",
@@ -3442,7 +3442,7 @@
 <p id="rfc.section.C.3.p.1">The following is a example JSON object for RSA sigVer test results sent from the crypto module to the ACVP server.</p>
 <pre>
  [
-    { "acvVersion": "0.5" },
+    { "acvVersion": &lt;acvp-version&gt; },
     { "vsId": 1173,
       "algorithm": "RSA",
       "mode": "sigVer",
@@ -3500,7 +3500,7 @@
 <p id="rfc.section.C.5.p.1">The following is a example JSON object for RSA signaturePrimitive test results sent from the crypto module to the ACVP server.</p>
 <pre>
 [
-    { "acvVersion": "0.5" },
+    { "acvVersion": &lt;acvp-version&gt; },
     { "vsId": 47,
       "algorithm": "RSA",
       "mode": "signaturePrimitive",
@@ -3528,7 +3528,7 @@
 <p id="rfc.section.C.6.p.1">The following is a example JSON object for RSA decryptionPrimitive test results sent from the crypto module to the ACVP server.</p>
 <pre>
 [
-    { "acvVersion": "0.5" },
+    { "acvVersion": &lt;acvp-version&gt; },
     { "vsId": 48,
       "algorithm": "RSA",
       "mode": "decryptionPrimitive",
