For kdf108, add deferred field again

--- a/artifacts/acvp_sub_kdf108.html
+++ b/artifacts/acvp_sub_kdf108.html
@@ -957,8 +957,8 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">infoGeneratedByServer</td>
-<td class="left">This flag indicates that the server is responsible for generating inputs (keyIn, iv). If "false", the client must generate the relevant inputs and attach to associated vector set response.</td>
+<td class="left">deferred</td>
+<td class="left">This flag indicates that the client is responsible for generating inputs (keyIn, iv). If "true", the client must generate the relevant inputs and attach to associated vector set response.</td>
 <td class="left">boolean</td>
 <td class="left">No</td>
 </tr>
@@ -1097,7 +1097,7 @@
 </tr>
 <tr>
 <td class="left">keyIn</td>
-<td class="left">Key derivation key (see Table 6). Only required when infoGeneratedByServer is "false".</td>
+<td class="left">Key derivation key (see Table 6). Only required when deferred is "true".</td>
 <td class="left">string</td>
 </tr>
 <tr>
@@ -1107,7 +1107,7 @@
 </tr>
 <tr>
 <td class="left">iv</td>
-<td class="left">IV (see Table 6). Only required when infoGeneratedByServer is "false".</td>
+<td class="left">IV (see Table 6). Only required when deferred is "true".</td>
 <td class="left">string</td>
 </tr>
 </tbody>
@@ -1286,12 +1286,12 @@
 			"tests": [{
 					"tcId": 1,
 					"keyIn": "5DA38931E8D9174BC3279C8942D2DB82",
-					"infoGeneratedByServer": true
+					"deferred": false
 				},
 				{
 					"tcId": 2,
 					"keyIn": "58F5426A40E3D5D2C94F0F97EB30C739",
-					"infoGeneratedByServer": true
+					"deferred": false
 				}
 			]
 		}]
