KAS-ECC curve value capitalization, #356

--- a/artifacts/acvp_sub_kas_ecc.html
+++ b/artifacts/acvp_sub_kas_ecc.html
@@ -1211,9 +1211,9 @@
 <tbody>
 <tr>
 <td class="left">eb</td>
-<td class="left">p-224</td>
-<td class="left">k-233</td>
-<td class="left">b-233</td>
+<td class="left">P-224</td>
+<td class="left">K-233</td>
+<td class="left">B-233</td>
 </tr>
 <tr>
 <td class="left"></td>
@@ -1223,9 +1223,9 @@
 </tr>
 <tr>
 <td class="left">ec</td>
-<td class="left">p-256</td>
-<td class="left">k-283</td>
-<td class="left">b-283</td>
+<td class="left">P-256</td>
+<td class="left">K-283</td>
+<td class="left">B-283</td>
 </tr>
 <tr>
 <td class="left"></td>
@@ -1235,9 +1235,9 @@
 </tr>
 <tr>
 <td class="left">ed</td>
-<td class="left">p-384</td>
-<td class="left">k-409</td>
-<td class="left">b-409</td>
+<td class="left">P-384</td>
+<td class="left">K-409</td>
+<td class="left">B-409</td>
 </tr>
 <tr>
 <td class="left"></td>
@@ -1247,9 +1247,9 @@
 </tr>
 <tr>
 <td class="left">ee</td>
-<td class="left">p-521</td>
-<td class="left">k-571</td>
-<td class="left">b-571</td>
+<td class="left">P-521</td>
+<td class="left">K-571</td>
+<td class="left">B-571</td>
 </tr>
 <tr>
 <td class="left"></td>
@@ -2459,7 +2459,7 @@
 <td class="left">curve</td>
 <td class="left">The curve used in the test group</td>
 <td class="left">value</td>
-<td class="left">p-224, p-256, p-384, p-521, k-233, k-283, k-409, k-571, b-233, b-283, b-409, b-571</td>
+<td class="left">P-224, P-256, P-384, P-521, K-233, K-283, K-409, K-571, B-233, B-283, B-409, B-571</td>
 <td class="left">No</td>
 </tr>
 <tr>
@@ -2647,7 +2647,7 @@
 				},
 				"parameterSet": {
 					"ec": {
-						"curve": "k-283",
+						"curve": "K-283",
 						"hashAlg": ["SHA2-224", "SHA2-256"],
 						"macOption": {
 							"AES-CCM": {
@@ -2705,7 +2705,7 @@
 			"noKdfNoKc": {
 				"parameterSet": {
 					"eb": {
-						"curve": "p-224",
+						"curve": "P-224",
 						"hashAlg": ["SHA2-224", "SHA2-256"]
 					}
 				}
@@ -2742,7 +2742,7 @@
 				"kdfType": "asn1",
 				"idServerLen": 48,
 				"idServer": "434156536964",
-				"curve": "p-256",
+				"curve": "P-256",
 				"tests": [{
 					"tcId": 151,
 					"ephemeralPublicServerX": "CBC9AF2F0FCE0F06643D7524DCCA96C78564BA77196C5F5F65DC0A119409A1F3",
@@ -2765,7 +2765,7 @@
 				"kdfType": "asn1",
 				"idServerLen": 48,
 				"idServer": "434156536964",
-				"curve": "p-224",
+				"curve": "P-224",
 				"tests": [{
 					"tcId": 161,
 					"ephemeralPublicServerX": "FFAD4CDB4293F61C2A74566FD4323A03C6BB3F9D6526D8E0506B2186",
@@ -2788,7 +2788,7 @@
 				"idServerLen": 48,
 				"idServer": "434156536964",
 				"idIutLen": 0,
-				"curve": "p-224",
+				"curve": "P-224",
 				"tests": [{
 					"tcId": 181,
 					"ephemeralPublicServerX": "D489605D37C4F555E50D8F010BEE3165B93F7C749263C4BF3E9A4808",
@@ -2818,7 +2818,7 @@
 				"idServerLen": 48,
 				"idServer": "434156536964",
 				"idIutLen": 0,
-				"curve": "p-224",
+				"curve": "P-224",
 				"tests": [{
 					"tcId": 231,
 					"ephemeralPublicServerX": "A0457CF2F5D38B72FF1BF3A2CF4C7CE30F215B5E52A53C39193B1639",
@@ -2857,7 +2857,7 @@
 				"kasMode": "noKdfNoKc",
 				"parmSet": "eb",
 				"hashAlg": "SHA2-224",
-				"curve": "p-224",
+				"curve": "P-224",
 				"tests": [{
 					"tcId": 1,
 					"ephemeralPublicServerX": "DACE4B35FD720DDD6B307777EBAFE53859C5FC2D330755B05B061CEB",
@@ -2871,7 +2871,7 @@
 				"kasMode": "noKdfNoKc",
 				"parmSet": "eb",
 				"hashAlg": "SHA2-224",
-				"curve": "p-224",
+				"curve": "P-224",
 				"tests": [{
 					"tcId": 21,
 					"ephemeralPublicServerX": "747EDBB8F62E1F06BD542FC2DD93169CB24DA6EF9E2FED4FE60FCBE6",
@@ -2886,7 +2886,7 @@
 				"kasMode": "noKdfNoKc",
 				"parmSet": "eb",
 				"hashAlg": "SHA2-224",
-				"curve": "p-224",
+				"curve": "P-224",
 				"tests": [{
 					"tcId": 41,
 					"ephemeralPublicServerX": "866BD81E951787AA1130CB67BA48E22F8A9E7EFF0713418B4FB8A31C",
@@ -2905,7 +2905,7 @@
 				"kasMode": "noKdfNoKc",
 				"parmSet": "eb",
 				"hashAlg": "SHA2-224",
-				"curve": "p-224",
+				"curve": "P-224",
 				"tests": [{
 					"tcId": 91,
 					"ephemeralPublicServerX": "7A2EBA553C4DC0E4D7A19A3648BA9713496EB462B1B7D83D375F7FFD",
